<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity">

    <include layout="@layout/content_timer" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="16dp"
        android:contentDescription="@string/pause"
        app:srcCompat="@drawable/ic_pause" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:contentDescription="@string/start"
        app:srcCompat="@drawable/ic_start" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/stop"
        app:srcCompat="@drawable/ic_stop" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="16dp"
        android:contentDescription="@string/previous"
        app:srcCompat="@drawable/ic_prev" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/next"
        app:srcCompat="@drawable/ic_next" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/phaseList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>